...
    }
    
    private func showResults() {
        statisticService.store(correct: correctAnswers, total: questionsAmount)
        
        let viewModel = QuizResultsViewModel(
            title: "Этот раунд окончен!",
            text: makeResultsMessage(),
            buttonText: "Сыграть ещё раз"
        )
        DispatchQueue.main.async { [weak self] in
                self?.viewController?.show(quiz: viewModel)
            }
    }
    
...
